# CellularAutomaton

./: .gitignore  CMakeLists.txt  CellSpace  gol.ca  gol160-90.bench  testRule.ca  valgrind-out.txt  vcpkg.json  wireworld.ca
life_patterns/: wireworld_rygb.mc
shaders/: shader.frag  shader.vert
srcs/: CAParser.cpp  CAParser.hpp  Cell.cpp  Cell.hpp  CellGrid.cpp  CellGrid.hpp  CellSpace.cpp  CellSpace.hpp  HephGui.cpp  HephGui.hpp  HephGuiSetup.cpp  QuadTree.cpp  QuadTree.hpp  RuleSet.cpp  RuleSet.hpp  SubSpace.hpp  main.cpp
